Fix narrow window size not shrinking on IE11
- Use `auto` insted of `initial`
- `initial not supported by IE (even IE11)

--- a/src/resources/apps/fr/style/form-runner-responsive.less
+++ b/src/resources/apps/fr/style/form-runner-responsive.less
@@ -5,7 +5,7 @@
     @media (max-width: 980px) {
     
         .fr-view {
-            width: inherit;
+            width: auto;
             // Add padding on the sides, so the content doesn't touch the border of the viewport
             padding: 0 10px;
         }
@@ -17,7 +17,7 @@
         
         .span12 {
             // Don't use fixed width
-            width: initial;
+            width: auto;
             // Isn't sized based on its container if floated
             float: none;
         }
